2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	* gdesktopappinfo.c (g_app_info_can_delete): Only allow deleting
	files that have been created by g_app_info_create_from_commandline.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 541715 – win32 : patch for warnings and signature problems in 
	recent code
	
	* glocalvfs.c: Avoid unused variables. Pointed out by Jody
	Goldberg.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 562393 – g_buffered_input_stream_read_byte broken if data
	available

	* gbufferedinputstream.c (g_buffered_input_stream_read_byte): Fix
	handling of buffered content.  Patch by Philip Withnall

	* tests/buffered-input-stream.c: Add a testcase for this bug.
	* tests/Makefile.am: And build it

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 561807 – inotify_sub.c :: dup_dirname() fails to remove trailing
	'/'

	* inotify/inotify-sub.c (dup_dirname): Actually strip the trailing
	'/' away. Spotted by Dan Williams.

2008-11-21  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 561375 – Leaks mountpoint description

	* glocalfile.c: (get_mount_info): don't leak the mountpoint description
	string.

2008-11-21  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 561352 – Leak of icon description

	* gcontenttype.c: (g_content_type_get_icon): don't leak the XDG mimetype
	generic icon string.

2008-11-14  Matthias Clasen <mclasen@redhat.com>

	* gfileattribute.c: Add G_FILE_ATTRIBUTE_PREVIEW_ICON to doc table.

2008-11-12  Tor Lillqvist  <tml@novell.com>

	Bug 556415 - Crash on Windows 2000 in g_winhttp_vfs_init()

	* win32/gwinhttpvfs.h: Move the set of function pointers to
	winhttp.dll into a separate struct GWinHttpDllFuncs. Just have a
	pointer to that in the GWinHttpVfsClass.
	
	* win32/gwinhttpvfs.c: Move the lookup of functions from
	winhttp.dll into a function of its own, that stores the pointers
	in a separate GWinHttpDllFuncs variable. Add two bookeeping
	booleans lookup_done and funcs_found.
